# PUCP-1MTR56

./: DividirVideo.py  README.md  clasificacion_botellas.ipynb  main.py  pyproject.toml  requirements.txt
