[project]
name = "pucp"
version = "0.1.0"
description = "Proyecto PUCP con TensorFlow y visión por computadora"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "ipykernel==6.30.1",
    "matplotlib==3.7.5",
    "opcua==0.98.13",
    "opencv-python==4.12.0.88",
    "pillow==11.0.0",
    "seaborn==0.13.2",
    "tensorflow==2.20.0",
]
